fixed chapter references in introduction.tex

--- a/introduction.tex
+++ b/introduction.tex
@@ -161,7 +161,7 @@ both the declarative paradigms.
 %language can provide.
 This can be achieved in two ways:
 \begin{description}
-\item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
+\item [Embedding (Chapter~\ref{chap:embedding}):]
 
   This approach involves translating a complete language into the host language as an extension such as a
   library or module.
@@ -172,7 +172,7 @@ This can be achieved in two ways:
   Examples and further discussion on the same are
   provided in the chapters to come.
 
-\item [Paradigm Integration (\chapterReference{chap:multiparadigm}{Chapter 5}):]
+\item [Paradigm Integration (Chapter~\ref{chap:multiparadigm}):]
 
   This approach goes much deeper as it does not involve a direct translation.
   An attempt is made by taking a particular characteristic of a language and merging it with the characteristic of
@@ -198,15 +198,18 @@ This can be achieved in two ways:
 %----------------------------------------------------------------------------
 \section{Thesis organization}
 
-The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the shortcomings of the
-previous works and an approach for improvements.
-\chapterReference{chap:background}{Chapter 3}, the background talks about the programming paradigms and languages
+The next chapter, Chapter~\ref{chap:background} talks about the programming paradigms and languages
 in general and the ones in question.
-Then we look at the question from different angles namely, \chapterReference{chap:embedding}{Chapter 4},  Embedding
-a Programming Language into another Programming Language and  \chapterReference{chap:embedding}{Chapter 5}, Multi
-Paradigm Languages (Functional Logic Languages).
-Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapter 6} and finishing off with the
-\chapterReference{chap:conclusion}{Chapter 7}, the expected outcomes.
+Chapter~\ref{chap:proposedWork} provides details about the shortcomings of the
+previous works and an approach for improvements. Chapter~\ref{chap:accomplishedWork} provides details on the conceptual contributions
+of this thesis and the prototypes.
+Then we look at the question from different angles namely, Chapter~\ref{chap:embedding},  embedding
+a programming language into another programming language and  Chapter~\ref{chap:multiparadigm}, multi
+paradigm languages (functional logic languages).
+Some of the indirectly related content resides in Chapter~\ref{chap:relatedWork}. Chapters \ref{chap:hwh} and \ref{chap:pwp} discuss the 
+languages used in this thesis; \progLang{Haskell} and \progLang{Prolog}. Chapters \ref{proto1}, \ref{proto2}, \ref{proto3} and 
+\ref{proto4} describe the ideas and the implementation details of the prototypes. Chapter~\ref{chap:futureScope} gives a 
+glimpse of the future and we conclude with the Chapter~\ref{chap:conclusion}.
 
 
 \ifMain
