added recap to relatedWork.tex

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -302,6 +302,7 @@ example: ``Suppose I have a list, foo, with a node, bar, ...''
 
 
 \section{Chapter recapitulation}
-
+Recapitulating, this chapter described the concepts loosely related to the thesis but do not bare a direct point of contact for better 
+understanding.
 
 \end{document}
