--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1518,6 +1518,16 @@ month = {February},
 year = {2003},
 url = {http://cs.union.edu/~striegnk/learn-prolog-now/html/node88.html}
 }
+@article{dean2008mapreduce,
+  title={MapReduce: simplified data processing on large clusters},
+  author={Dean, Jeffrey and Ghemawat, Sanjay},
+  journal={Communications of the ACM},
+  volume={51},
+  number={1},
+  pages={107--113},
+  year={2008},
+  publisher={ACM}
+}
 @comment{website:,
 title = ,
 author = ,
