--- a/proto1.tex
+++ b/proto1.tex
@@ -228,9 +228,9 @@ In this prototype we explore the unification aspect only.
 \end{figure}
 
 This prototype demonstrates the process of creating a data type to replicate the target language type system while conforming to the host 
-language restrictions by utilizing the
-benefits.\endnote{
+language restrictions.\endnote{
   \david{``\textit{the benefits}'' of what?}
+	\mehul{changed}
 }
 
 
@@ -247,40 +247,7 @@ it into a non-recursive data type. Basically we do unification monadically.
 \end{figure}
 
 To start we need to define a abstract syntax for the \progLang{Prolog}-like language.
-But\butbut{} there is a conflict between the type systems as we shall discuss.
-
-
-\endnote{
-  \david{move to related concepts Start}
-}
-
-A type system consists of a set of rules to define a ``type'' to different constructs in a
-programming language such as variables, functions and so on.
-A static type system requires types to be attached to the programming constructs before hand which results in
-finding errors at compile time and thus increase the reliability of the program.
-On the other hand the dynamic type system passes through code which would not have worked in former
-environment; it comes off as less rigid.
-
-
-The advantages of static typing \cite{meijer2004static} are :
-\begin{itemize}
-\item earlier detection of errors,
-\item better documentation in terms of type signatures,
-\item more opportunities for compiler optimizations,
-\item increased run-time efficiency, and
-\item better developer tools;
-\end{itemize}
-
-whereas for dynamic typing the advantages are:
-\begin{itemize}
-\item less rigidity,
-\item suitability, and
-\item re-usability.
-\end{itemize}
-
-\endnote{
-  \david{move to related concepts end}
-}
+There is a conflict between the type systems as discussed in Chapter~\ref{chap:relatedWork}.
 
 Since \progLang{Haskell} is statically typed we need to define a ``typed'' language which
 has a number of constructs representing different terms in \progLang{Prolog}, such as complex structures
@@ -406,6 +373,7 @@ It means that applying one more \haskellConstruct{FlatTerm} would not change any
 }
 a \textcolor{red}{fix}\endnote{%
   Spelling!
+  \mehul{I do not understand}
 }
 point does not move under \haskellConstruct{FlatTerm}.
 
@@ -543,9 +511,10 @@ Figure~\ref{fig:automatic-extension}.
 \david{Check the Section~\ref{sec:making-lang-comp} title change above.}
 
 Our language is now opened up and ready for expansion, but it still needs to conform to the requirements of the
-\codeLibrary{unifiication-fd} library (\cite{unification-fd-lib}), so that the generic unification algorithm upon
-customization works with it.\endnote{%
-  This sentence can be simplified, I think.}
+\codeLibrary{unifiication-fd} library (\cite{unification-fd-lib}) for the unification algorithm to work.\endnote{%
+  This sentence can be simplified, I think.
+  \mehul{changed}
+  }
 
   The library provides functionality for first-order structural unification over general structure types along with
   mutable variable bindings.
@@ -585,8 +554,9 @@ Figure~\ref{fig:Functor Hierarchy} shows the relation between the different clas
 \label{fig:Functor Hierarchy}
 \end{figure}
 
-The \Verb!Functor! and \Verb!Foldable! instances providing functions for applying map-reduce\endnote{%
+The \Verb!Functor! and \Verb!Foldable! instances providing functions for applying map-reduce as described in Chapter~\ref{chap:relatedWork}.\endnote{%
   What is ``\texttt{map-reduce}''?
+  \mehul{changed}
 }
 to the data structure.
 The primary issue is that at the end of the operation the structure if the data type is lost which would not help
@@ -601,6 +571,7 @@ We create the necessary instances\endnote{%
   I am deeply suspicious of the instance for \texttt{Applicative} given.
 
   \mehul{I agree, I think I just created one for the purpose of the diagram.}
+  \mehul{delete?}
 }
 as shown in Listing~\ref{tab:flat-term-class-inst}.
 \begin{code-list}
@@ -639,6 +610,7 @@ which provides facilities to generate fresh logic variables and perform look ups
 implementations exist,\endnote{%
   In this immediate region, I (dgc) removed text inserted by a failed push or pull merge.
   Check to see that it is correct, or reverse commit \texttt{95804e3\dots}.
+	\mehul{looks ok, cannot remember exactly}
 }
 
 \begin{enumerate}
