--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -14,6 +14,48 @@
 This chapter discusses concepts which are related to the work presented in this thesis which may no bear a direct point of contact but 
 contribute to understanding. 
 
+\section{Map-reduce}
+
+MapReduce is a programming model and an associated implementation for processing and generating large data sets. Users specify a map 
+function that processes a key/value pair to generate a set of intermediate key/value pairs, and a reduce function that merges all 
+intermediate values associated with the same intermediate key \cite{dean2008mapreduce}.
+
+\section{Type systems}
+\endnote{
+  \david{move to related concepts Start}
+  \mehul{moved}
+}
+
+A type system consists of a set of rules to define a ``type'' to different constructs in a
+programming language such as variables, functions and so on.
+A static type system requires types to be attached to the programming constructs before hand which results in
+finding errors at compile time and thus increase the reliability of the program.
+On the other hand the dynamic type system passes through code which would not have worked in former
+environment; it comes off as less rigid.
+
+
+The advantages of static typing \cite{meijer2004static} are :
+\begin{itemize}
+\item earlier detection of errors,
+\item better documentation in terms of type signatures,
+\item more opportunities for compiler optimizations,
+\item increased run-time efficiency, and
+\item better developer tools;
+\end{itemize}
+
+whereas for dynamic typing the advantages are:
+\begin{itemize}
+\item less rigidity,
+\item suitability, and
+\item re-usability.
+\end{itemize}
+
+\endnote{
+  \david{move to related concepts end}
+\mehul{moved}
+}
+
+
 \section{Warren abstract machine}
 There are some technicalities which are indirectly related to the problem but do not bare a point of contact.
 The underpinnings of the languages throw some more light on the how different languages work to solve a problem.
