added recap for proto1.tex

--- a/proto1.tex
+++ b/proto1.tex
@@ -839,6 +839,9 @@ The final reconversion to return a list of substitutions,
 \end{code-list}
 
 \section{Chapter recapitulation}
+Recapitulating, this chapter provides the ideas of language modification and monadic unification along with their respective 
+implementations. 
+
 
 \ifMain
 \begin{scope}
