removed unecessary \protect in section title

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -16,7 +16,7 @@ This chapter discusses the current implementations and publications for embeddin
 and specifically in \progLang{Haskell}. We take a look at their shortcomings and propose improvements.
 
 
-\section{\protect{Existing work by others}} \label{sec:existing-work-by-others}
+\section{Existing work by others} \label{sec:existing-work-by-others}
 
 There have been several attempts at embedding \progLang{Prolog} into \progLang{Haskell}, which are
 discussed below, along with their shortcomings.
