Added \progLang to section title.

--- a/embedding.tex
+++ b/embedding.tex
@@ -126,7 +126,7 @@ backtracking abilities and a \haskellConstruct{monadic encapsulation} to turn a 
 %%   See the preceding comments about using \texttt{itemize} rather than \texttt{description}.
 %%   Maybe these should be subsections.
 %% }
-\subsection{Prolog libraries}
+\subsection{\progLang{Prolog} libraries}
 
 To replicate \progLang{Prolog}-like
 capabilities \progLang{Haskell} seems to be a popular choice
