changed section 10.4 title in proto1

--- a/proto1.tex
+++ b/proto1.tex
@@ -219,7 +219,7 @@ In this prototype we explore the unification aspect only.
 \label{fig:Trace for append}
 \end{figure}
 
-\section{What we do in this prototype}
+\section{Prototype architecture}
 
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{Prototype-1.pdf}
