--- a/proto2.tex
+++ b/proto2.tex
@@ -12,7 +12,7 @@
 This chapter attempts to infuse the generic methodology from Chapter~\ref{proto1} in a current \progLang{Prolog}
 implementation \cite{prolog-lib} and make the unification ``monadic''.
 
-This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using
+This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using \codeLibrary{prolog-0.2.0.1}
 \cite{prolog-lib} as the base implementation.
 The language modifications and unification mechanism have been taken from Chapter~\ref{proto1} and adapted to fit
 in with the other components such as the search strategy of the library.
@@ -20,10 +20,26 @@ in with the other components such as the search strategy of the library.
 
 \section{How \protect\codeLibrary{prolog-0.2.0.1} works}
 
-As described in the previous chapter about extending languages to incorporate functionality, this prototype applies
-the procedure to the eDSL in \cite{prolog-lib}.\endnote{%
+The \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} was written by Matthias Bartsch and consists of 14 \progLang{Haskell} files. It 
+implements data base assertions and cuts but lacks any IO facilities. Moreover, the abstract syntax used to implement the language is rigid
+and leaves very little to no scope for extension. Figure~\ref{fig:prlg0201architecture} describes its architecture.\endnote{%
   See the comments in \S~\ref{subsec:thoughts-chapt-proto2}.
+  \mehul{changed}
 }
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale = .6]{prolog0201_architecture.png}
+\caption{\codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} architecture}
+\label{fig:prlg0201architecture}
+\end{figure}
+
+
+\begin{comment}
+
+As described in the previous chapter about extending languages to incorporate functionality, this prototype applies
+the procedure to the eDSL in \cite{prolog-lib}.
+\end{comment}
 
 From the Listing~\ref{tab:origgramp0201} we will focus on \haskellConstruct{Terms}, since the others just
 add wrappers around expressions which can be created by it.
@@ -56,7 +72,7 @@ They specifically contain parts of a compiler (see Figure~\ref{fig:Phases of Com
 
 The architecture for a compiler as described in Figure~\ref{fig:Phases of Compiler} is not needed since
 \progLang{Haskell} provides most of them.
-Nonetheless, the library has the following major components:
+Nonetheless, the library has the following major components as shown in Figure~\ref{fig:prlg0201architecture}:
 
 \begin{itemize}
 \item the syntax which defines the language,
@@ -210,8 +226,10 @@ Listing~\ref{tab:prlg0201monadicunificationtranslation}.
 \end{comment}
 
 The modification to the unification procedure is described in Listing~\ref{tab:prlg0201monadicunificationfunctions}, 
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction1}, Listing~\ref{tab:prlg0201monadicunificationtestsandextraction2} and 
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3}.
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction1}, Listing~\ref{tab:prlg0201monadicunificationtestsandextraction2}, 
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification}, 
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} and 
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}.
 
 
 \begin{code-list}[H]
@@ -238,26 +256,70 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3}.
 \label{tab:prlg0201monadicunificationtestsandextraction2}
 \end{code-list}
 
-\subsubsection{monadicUnification}
-Takes two fixed flat terms and converts them into UTerms. Performs unification on them inside the \haskellConstruct{Binding Monad} and 
-returns unifier along with a dictionary mapping variables to values. 
+In this implementation unification is a three part procedure as follows:
 
-\subsubsection{goUnify}
-Runs the above function 
+\begin{enumerate}
+\item{monadicUnification}
 
+Firstly, we take a couple of flattened terms in fixed point and convert them into \haskellConstruct{UTerm}-format so that we can apply
+the \haskellConstruct{unify} function provided by \codeLibrary{unification-fd} and results in a \languageConstruct{unifier}. The type 
+signature of \haskellConstruct{unify} is shown in Listing~\ref{tab:unifytypesignature}.
 
-\subsubsection{f1}
+\begin{code-list}[H]
+	\begin{singlespace}
+		\begin{minted}[linenos]{haskell}
+unify :: 
+(BindingMonad t v m, Fallible t v e, MonadTrans em, Functor (em m), 
+	MonadError e (em m))	 
+=> UTerm t v	 
+-> UTerm t v	 
+-> em m (UTerm t v)|
+		\end{minted}
+	\end{singlespace}
+\caption{\haskellConstruct{unify} type signature}
+\label{tab:unifytypesignature}
+\end{code-list}
 
-Retranslate the terms back to fixed flat terms and return results. 
-
+We also return a union of the variable dictionaries for each of the terms required to convert the result into the eDSL.
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification} the procedure for monadicUnification.
 
 \begin{code-list}[H]
   \begin{singlespace}
-    \inputminted[linenos,firstline=96]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+    \inputminted[linenos,firstline=96, lastline=105]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
   \end{singlespace}
-\caption{prolog-0.2.0.1 Monadic Unification Tests and Extraction 3}
-\label{tab:prlg0201monadicunificationtestsandextraction3}
+\caption{monadicUnification function}
+\label{tab:prlg0201monadicunificationtestsandextraction3monadicUnification}
 \end{code-list}
+
+\item{f1}
+
+Retranslate the terms back to fixed flat terms and return results. Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}
+returns list of \haskellConstruct{VariableName}, \haskellConstruct{Prolog} pairs. 
+
+\begin{code-list}[H]
+  \begin{singlespace}
+    \inputminted[linenos,firstline=123, lastline=132]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+  \end{singlespace}
+\caption{f1 function}
+\label{tab:prlg0201monadicunificationtestsandextraction3f1}
+\end{code-list}
+
+
+\item{goUnify}
+
+This function executes the above operations in the \haskellConstruct{BindingMonad} and return the necessary results. 
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} shows the goUnify function.
+
+\begin{code-list}[H]
+  \begin{singlespace}
+    \inputminted[linenos,firstline=108, lastline=120]{haskell}{haskell-proto2-monadic-unification-tests-and-extraction.hs}
+  \end{singlespace}
+\caption{goUnify function}
+\label{tab:prlg0201monadicunificationtestsandextraction3goUnify}
+\end{code-list}
+
+
+\end{enumerate}
 
 
 
@@ -280,3 +342,4 @@ Recapitulating, this chapter provides the details on a \progLang{Prolog} query r
 \fi
 
 \end{document}
+
