added, removed, polished content in futureScope.tex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1528,6 +1528,20 @@ url = {http://cs.union.edu/~striegnk/learn-prolog-now/html/node88.html}
   year={2008},
   publisher={ACM}
 }
+@misc{website:swiprologdbops,
+title = {Database operations in SWI Prolog},
+author = {SWI Prolog},
+month = {},
+year = {},
+url = {http://www.swi-prolog.org/pldoc/man?section=db}
+}
+@misc{website:assertzswiprolog,
+title = {assertz in SWI Prolog},
+author = {SWI Prolog},
+month = {},
+year = {},
+url = {http://www.swi-prolog.org/pldoc/man?predicate=assertz/1}
+}
 @comment{website:,
 title = ,
 author = ,
