Removed endnote about two forms of Fix .

--- a/proto1.tex
+++ b/proto1.tex
@@ -375,15 +375,7 @@ a \textcolor{red}{fix}\endnote{%
 }
 point does not move under \haskellConstruct{FlatTerm}.
 
-\progLang{Haskell} provides it in two forms, as a function and as a constructor.\endnote{%
-  \david{Why do you need to discuss value fixed points (\textit{i.e.,} \texttt{\bfseries fix})?  Do you need them?} 
-
-  \mehul{Well not really but since we are talking about fixed point in general}
-
-  \david{Get rid of it.  Put in a marker if you want.  If we really need it, we can drag it from the git repository.}
-	
-  \mehul{changed}
-}
+\progLang{Haskell} provides it in two forms, as a function and as a constructor.
 
 \begin{comment}
 \begin{enumerate}
