--- a/proto4.tex
+++ b/proto4.tex
@@ -16,9 +16,9 @@
 
 Our aim to embedd IO into the DSL
 
-So something like a \yyy{"}{``}data\yyy{"}{''} declaration for IO operations
+So something like a ``data'' declaration for IO operations
 
-\section{I/O is pure}
+\section{Current work}
 
 \cite{website:ioispurechristaylor}
 
@@ -40,49 +40,50 @@ These data structures can later be executed, and they cause effects to occur - b
 never with effects.
 
 Let's look at a simplified form of I/O, where we only care about reading from stdin, writing to stdout and returning a value. We can model 
-this with the \markWord{IOAction} data type.
+this with the \haskellConstruct{IOAction} data type.
 
-That is, an \markWord{IOAction} is one of the following three things:
+That is, an \haskellConstruct{IOAction} is one of the following three things:
 \begin{enumerate}
-\item A container for a value of type \markWord{a},
+\item A container for a value of type \haskellConstruct{a},
 
-\item A container holding a \markWord{String} to be printed to \markWord{stdout},
-  followed by another \markWord{IOAction a}, or
+\item A container holding a \haskellConstruct{String} to be printed to \haskellConstruct{stdout},
+  followed by another \haskellConstruct{IOAction a}, or
 
-\item A container holding a function from \markWord{String} \Verb!->! \markWord{IOAction a}, which can be applied
-  to whatever \markWord{String} is read from \markWord{stdin}. 
+\item A container holding a function from \haskellConstruct{String} \Verb!->! \haskellConstruct{IOAction a}, which can be applied
+  to whatever \haskellConstruct{String} is read from \haskellConstruct{stdin}. 
 \end{enumerate}
 
-Notice that the only terminal constructor is \markWord{Return} --
-that means that any \markWord{IOAction} must be a combination of \markWord{Get} and \markWord{Put} constructors, 
-finally ending in a \markWord{Return}.
+Notice that the only terminal constructor is \haskellConstruct{Return} --
+that means that any \haskellConstruct{IOAction} must be a combination of \haskellConstruct{Get} and \haskellConstruct{Put} constructors, 
+finally ending in a \haskellConstruct{Return}.
 
-Some simple actions include the one that prints to \markWord{stdout} before returning \Verb!()!:
+Some simple actions include the one that prints to \haskellConstruct{stdout} before returning \Verb!()!:
 
 \mint{haskell}|put s = Put s (Return ())|
 
-and the action that reads from \markWord{stdin} and returns the string unchanged:
+and the action that reads from \haskellConstruct{stdin} and returns the string unchanged:
 
 \mint{haskell}|get = Get (\s -> Return s)|
 
-To build up a language for doing I/O we need to be able to combine and sequence actions. We want the ability to perform an \markWord{IOAction} \markWord{a} 
-followed by an \markWord{IOAction} \markWord{b}, and return some result.
+To build up a language for doing I/O we need to be able to combine and sequence actions. We want the ability to perform an \haskellConstruct{IOAction} \haskellConstruct{a} 
+followed by an \haskellConstruct{IOAction} \haskellConstruct{b}, and return some result.
 
-In fact, we could have the second \markWord{IOAction} depend on the return value of the first one -\endnote{%
+In fact, we could have the second \haskellConstruct{IOAction} depend on the return value of the first one \endnote{%
   The preceding punctuation mark is incorrect.
+  \mehul{changed}
 }
 that is, we need a sequencing combinator of the 
 following type:
 
 \mint{haskell}|seqio :: IOAction a -> (a -> IOAction b) -> IOAction b|
 
-We want to take the \markWord{IOAction} \markWord{a} supplied in the first argument, get its return value (which is of type \markWord{a}) and feed that to the function in 
-the second argument, getting an \markWord{IOAction} \markWord{b} out, which can be sequenced with the first \markWord{IOAction} \markWord{a}.
+We want to take the \haskellConstruct{IOAction} \haskellConstruct{a} supplied in the first argument, get its return value (which is of type \haskellConstruct{a}) and feed that to the function in 
+the second argument, getting an \haskellConstruct{IOAction} \haskellConstruct{b} out, which can be sequenced with the first \haskellConstruct{IOAction} \haskellConstruct{a}.
 
-That's a bit of a mouthful, but writing this combinator isn't too hard. When we reach the final \markWord{Return}, we apply the function \markWord{f} to get a 
+That's a bit of a mouthful, but writing this combinator isn't too hard. When we reach the final \haskellConstruct{Return}, we apply the function \haskellConstruct{f} to get a 
 new action. For the other constructors, we keep the form of the action the same, and just thread seqio through the seqio constructor.
 
-Using \markWord{seqio} we can define the action that gets input from \markWord{stdin} and immediately prints it to
+Using \haskellConstruct{seqio} we can define the action that gets input from \haskellConstruct{stdin} and immediately prints it to
 the screen: 
 
 %\mint{haskell}|echo = get $\backslash$ seqio $\backslash$ put|
@@ -96,7 +97,7 @@ hello = put "What is your name?"      `seqio` \_    ->
         put ("Hello " ++ name ++ "!") `seqio` \_    ->
         put ("You are " ++ age ++ " years old")
 \end{minted}
-Although this looks like imperative code (admittedly with pretty unpleasant syntax), it's really a value of type \markWord{IOAction} \Verb!()!. In Haskell,\endnote{%
+Although this looks like imperative code (admittedly with pretty unpleasant syntax), it's really a value of type \haskellConstruct{IOAction} \Verb!()!. In \progLang{Haskell},\endnote{%
   Use \macroName{progLang}!
 }
 code can be data and data can be code.
@@ -106,8 +107,8 @@ In the gist\endnote{%
   natural English meaning.
   You'll need to explain this usage.
 }
- I've defined a function to convert an \markWord{IOAction} to a \markWord{String}, which allows them to be printed, so you can load the file into \markWord{GHCi} 
-and verify that \markWord{hello} is in fact just data:
+ I've defined a function to convert an \haskellConstruct{IOAction} to a \haskellConstruct{String}, which allows them to be printed, so you can load the file into \haskellConstruct{GHCi} 
+and verify that \haskellConstruct{hello} is in fact just data:
 
 \begin{minted}[linenos]{haskell}
 *Main> print hello
@@ -125,19 +126,19 @@ Put "What is your name?" (
   )
 )
 \end{minted}
-It will surprise no one to learn that \markWord{IOAction} is a monad. In fact we've already defined the necessary bind operation in \markWord{seqio}, so getting 
-the \markWord{Monad} instance is trivial:
+It will surprise no one to learn that \haskellConstruct{IOAction} is a monad. In fact we've already defined the necessary bind operation in \haskellConstruct{seqio}, so getting 
+the \haskellConstruct{Monad} instance is trivial:
 \begin{minted}[linenos]{haskell}
 instance Monad IOAction where
     return = Return
     (>>=)  = seqio
 \end{minted}
 
-The main benefit of doing this is that we can now sequence actions using Haskell's\endnote{%
+The main benefit of doing this is that we can now sequence actions using \progLang{Haskell}'s\endnote{%
   Use \macroName{progLang}!
 }
-\markWord{do} notation, which desugars into calls to \Verb!(>>=)!, and 
-hence to \markWord{seqio}. Our earlier \markWord{hello} example can now be written as:
+\haskellConstruct{do} notation, which desugars into calls to \Verb!(>>=)!, and 
+hence to \haskellConstruct{seqio}. Our earlier \haskellConstruct{hello} example can now be written as:
 \par
 \begin{minted}[linenos]{haskell}
 hello2 = do put "What is your name?"
@@ -148,12 +149,13 @@ hello2 = do put "What is your name?"
             put ("You are " ++ age ++ " years old!")
 \end{minted}
 Remember though, that this is still just defining a value of type 
-\markWord{IOAction} \Verb!()! -\endnote{%
+\haskellConstruct{IOAction} \Verb!()! ---\endnote{%
   You want an em-dash, not a hyphen here.
+  \mehul{changed}
 }
 no code is executed, and no effects occur! So far, this post is 100 \% pure.
 
-To see the effects, we need to define a function that takes an \markWord{IOAction} \markWord{a} and converts it into a value of type \markWord{IO} \markWord{a}, which can then be executed by the interpreter or the runtime system. It's easy to write such a function just by turning it into the approprate calls to \markWord{putStrLn} and \markWord{getLine}.
+To see the effects, we need to define a function that takes an \haskellConstruct{IOAction} \haskellConstruct{a} and converts it into a value of type \haskellConstruct{IO} \haskellConstruct{a}, which can then be executed by the interpreter or the runtime system. It's easy to write such a function just by turning it into the approprate calls to \haskellConstruct{putStrLn} and \haskellConstruct{getLine}.
 
 \begin{minted}[linenos]{haskell}
 run :: IOAction a -> IO a
@@ -162,8 +164,8 @@ run (Put s io) = putStrLn s >> run io
 run (Get g)    = getLine >>= \s -> run (g s)
 \end{minted}
 
-You can now load up \markWord{GHCi} and apply run to any action --
-a value of type \markWord{IO} \markWord{a} will be returned, and then immediately executed by the 
+You can now load up \haskellConstruct{GHCi} and apply run to any action --
+a value of type \haskellConstruct{IO} \haskellConstruct{a} will be returned, and then immediately executed by the 
 interpreter:
 
 \begin{minted}[linenos]{haskell}
@@ -178,30 +180,32 @@ You are 29 years old
 \end{minted}
 Is there any practical use to this?
 
-Yes -\endnote{%
+Yes ---\endnote{%
   The preceding punctuation mark should be an em-dash.
+  \mehul{changed}
 }
-an \markWord{IOAction} is a mini-language for doing I/O. In this mini language you are restricted to only reading from \markWord{stdin} and writing to \markWord{stdout} -\endnote{%
+an \haskellConstruct{IOAction} is a mini-language for doing I/O. In this mini language you are restricted to only reading from \haskellConstruct{stdin} and writing to \haskellConstruct{stdout} ---\endnote{%
   The preceding punctuation mark should be an em-dash.
+  \mehul{changed}
 }
 there is no accessing files, spawning threads or network I/O.
 
 In effect we have a 
 ``safe'' domain-specific language.
-If a user of your program or library supplies a value of type \markWord{IOAction} \markWord{a}, you know that you are free to convert it to an \markWord{IO} \markWord{a} using run and execute it, 
-and it will never do anything except reading from \markWord{stdin} and writing to \markWord{stdout} (not that those things aren't potentially dangerous in themselves, but\dots)
+If a user of your program or library supplies a value of type \haskellConstruct{IOAction} \haskellConstruct{a}, you know that you are free to convert it to an \haskellConstruct{IO} \haskellConstruct{a} using run and execute it, 
+and it will never do anything except reading from \haskellConstruct{stdin} and writing to \haskellConstruct{stdout} (not that those things aren't potentially dangerous in themselves, but\dots)
 
 
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto4-purvey-wincer.hs}
 \end{singlespace}
 
-\section{Dr. Casperson pure IO}
+\section{Appraoch 1}
 \begin{singlespace}
   \inputminted[linenos]{haskell}{haskell-proto4-myrtle-uppers.hs}
 \end{singlespace}
 
-\section{Mehul pure IO}
+\section{Approach 2}
 
 So when the program is getting interpreted the interpreter encounters an IO operation which then gets "interpreted" to the above and it 
 continues normally.
