Listing change in proto2.tex .

--- a/proto2.tex
+++ b/proto2.tex
@@ -151,7 +151,7 @@ the data itself.
 We implement the necessary instances to make the language unifiable as shown in Listing~\ref{tab:instncflatgrp0201}.
 \begin{code-list}[H]
   \begin{singlespace}
-    \inputminted[linenos]{haskell}{haskell-proto2-flattened-instances.hs}
+    \inputminted[linenos,lastline=15]{haskell}{haskell-proto2-flattened-instances.hs}
   \end{singlespace}
   \caption{Instances for flattened grammar}
 \label{tab:instncflatgrp0201}
